--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -12,11 +12,11 @@ server {
 	server_name johnafolayan.duckdns.org:5000;
 
 	location / {
-		proxy_pass http://johnafolayan.duckdns.org:5000/;
+		proxy_pass http://myportfolio:5000/;
 	}
 
 	# Load the certificate files.
-	ssl_certificate /etc/letsencrypt/live/johnafolayan.duckdns.org/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/johnafolayan.duckdns.org/privkey.pem;
-	ssl_trusted_certificate /etc/letsencrypt/live/johnafolayan.duckdns.org/chain.pem;
+	ssl_certificate /etc/letsencrypt/live/myportfolio/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/myportfolio/privkey.pem;
+	ssl_trusted_certificate /etc/letsencrypt/live/myportfolio/chain.pem;
 }
