--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -1,15 +1,15 @@
 server {
 	listen 80;
-	server_name johnafolayan.duckdns.org:5000;
+	server_name johnafolayan.duckdns.org;
 
-	if ($host = johnafolayan.duckdns.org:5000)	{
+	if ($host = johnafolayan.duckdns.org)	{
 		return 301 https://$host$request_uri;
 	}
 }
 
 server {
 	listen 443 ssl;
-	server_name johnafolayan.duckdns.org:5000;
+	server_name johnafolayan.duckdns.org;
 
 	location / {
 		proxy_pass http://myportfolio:5000/;
