--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # .env
 URL=localhost:5000
-MYSQL_HOST=mysql
+
+MYSQL_HOST=localhost
 MYSQL_USER=myportfolio
-MYSQL_PASSWORD=mypassword
+MYSQL_PASSWORD=mysql
 MYSQL_DATABASE=myportfoliodb
-MYSQL_ROOT_PASSWORD=myrootpassword
