--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ URL=localhost:5000
 
 MYSQL_HOST=localhost
 MYSQL_USER=myportfolio
-MYSQL_PASSWORD=mysql
+MYSQL_PASSWORD=mypassword
 MYSQL_DATABASE=myportfoliodb
