--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    name: "Deploy to AWS EC2 Virtual Machine"
+    name: "Deploy to VPS"
     runs-on: ubuntu-latest
     steps:
       - name: Configure SSH
@@ -16,8 +16,8 @@ jobs:
           mkdir -p ~/.ssh/
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/deploy-key.pem
           chmod 600 ~/.ssh/deploy-key.pem
-          cat >>~/.ssh/config <<END
-          Host my-vm
+          cat >> ~/.ssh/config <<END
+          Host my-vps
             HostName $SSH_IP
             User $SSH_USER
             IdentityFile ~/.ssh/deploy-key.pem
@@ -28,15 +28,5 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           SSH_IP: ${{ secrets.SSH_IP }}
 
-      - name: Deploy site
-        run: ssh my-vm '~/redeploy-site.sh'
-
-      - name: Print container status
-        run: ssh my-vm 'cd ${{ secrets.PROJECT_ROOT }} && docker compose ps'
-
-      - name: Send success message to Discord
-        run: curl -s -X POST "${{ secrets.DISCORD_WEBHOOK }}" -d "content=🚀 Deployment Successful"
-
-      - name: Send failure message to Discord
-        if: ${{ failure() }}
-        run: curl -s -X POST "${{ secrets.DISCORD_WEBHOOK }}" -d "content=🚨 Deployment Failed"
+      - name: Print project root directory
+        run: ssh my-vps 'cd ${{ secrets.PROJECT_ROOT }} && pwd'
