--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
         run: chmod +x redeploy-site.sh
 
       - name: Deploy site
-        run: ssh my-vm 'cd ${{ secrets.PROJECT_ROOT }} && ./redeploy-site.sh'
+        run: ssh my-vm 'cd ${{ secrets.PROJECT_ROOT }} && 'chmod +x redeploy-site.sh' && ./redeploy-site.sh'
